--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "browser": "dist/index.bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c && tsc"
+    "build": "rollup -c && tsc",
+    "dev": "rollup -cw && tsc"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,10 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "postcss-copy": "^7.1.0",
+    "postcss-import": "^12.0.1",
+    "rollup-plugin-postcss": "^2.6.4",
+    "rollup-plugin-serve": "^1.0.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
