--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "./dist",
     "target": "es2015",
     "skipLibCheck": true,
-    "types": []
+    "types": [],
+    "sourceMap": true
   },
   "include": ["src/virtual-swiper.ts"],
   "exclude": ["node_modules"]
