--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c && tsc",
     "build:prod": "NODE_ENV=production rollup -c && tsc",
-    "dev": "rollup -cw && tsc"
+    "dev": "rollup -cw && tsc",
+    "publish-docs": "cd website && GIT_USER=berndartmueller CURRENT_BRANCH=master npm run publish-gh-pages"
   },
   "repository": {
     "type": "git",
