--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "@babel/preset-typescript": "^7.10.4",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
+    "rollup": "^2.26.0",
     "rollup-plugin-postcss": "^3.1.5",
     "rollup-plugin-serve": "^1.0.3",
-    "typescript": "^3.9.7",
-    "rollup": "^2.26.0",
     "rollup-plugin-terser": "^7.0.0",
-    "rollup-plugin-typescript2": "^0.27.2"
+    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-visualizer": "^4.1.0",
+    "typescript": "^3.9.7"
   }
 }
