--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "swiper"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --bail",
     "build": "rollup -c && tsc",
     "build:prod": "NODE_ENV=production rollup -c && tsc",
     "dev": "rollup -cw && tsc",
@@ -47,6 +47,11 @@
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-typescript2": "^0.27.2",
     "rollup-plugin-visualizer": "^4.1.0",
+    "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.10",
+    "jest": "^26.4.1"
   }
 }
