--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
     "rollup": "^2.26.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-postcss": "^3.1.5",
     "rollup-plugin-serve": "^1.0.3",
     "rollup-plugin-terser": "^7.0.0",
