--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "NODE_ENV=test jest --bail",
     "build": "rollup -c && tsc",
     "build:prod": "NODE_ENV=production rollup -c && tsc",
-    "dev": "rollup -cw && tsc",
+    "dev": "NODE_ENV=development rollup -cw && tsc",
     "publish-docs": "cd website && GIT_USER=berndartmueller CURRENT_BRANCH=master npm run publish-gh-pages"
   },
   "repository": {
