--- a/package.json
+++ b/package.json
@@ -17,11 +17,25 @@
     "swiper"
   ],
   "scripts": {
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "NODE_ENV=test jest --bail",
     "build": "rollup -c && tsc",
     "build:prod": "NODE_ENV=production rollup -c && tsc",
     "dev": "NODE_ENV=development rollup -cw && tsc",
+    "lint-staged": "lint-staged",
+    "typecheck": "tsc --noUnusedParameters false --noUnusedLocals false && rm -rf dist",
     "publish-docs": "cd website && GIT_USER=berndartmueller CURRENT_BRANCH=master npm run publish-gh-pages"
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts": [
+      "npm run lint",
+      "npm run test -- --findRelatedTests"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged && npm run typecheck"
+    }
   },
   "repository": {
     "type": "git",
@@ -39,6 +53,13 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
     "rollup": "^2.26.0",
