--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "browser": "dist/index.bundle.js",
   "source": "src/virchual.ts",
   "types": "dist/virchual.d.ts",
+  "unpkg": "dist/index.bundle.js",
   "files": [
     "src",
     "dist"
