--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.bundle.js",
-  "source": "src/virchual.ts",
-  "types": "dist/virchual.d.ts",
+  "source": "src/index.ts",
+  "types": "dist/index.d.ts",
   "unpkg": "dist/index.bundle.js",
   "files": [
     "src",
