--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev": "NODE_ENV=development rollup -cw && tsc",
     "lint-staged": "lint-staged",
     "typecheck": "tsc --noUnusedParameters false --noUnusedLocals false --outDir ./tmpDist --declarationDir ./tmpDist && rm -rf tmpDist",
+    "prepublish": "npm run build:prod",
     "publish-docs": "cd website && GIT_USER=berndartmueller CURRENT_BRANCH=master npm run publish-gh-pages"
   },
   "lint-staged": {
