small stuff (I know my git commit messages suck, but who cares :D)

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "pre-commit": "npm run lint-staged && npm run typecheck"
     }
   },
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/berndartmueller/virchual.git"
