--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "types": ["node", "jest"],
     "sourceMap": true
   },
-  "include": ["src/index.ts", "examples"],
+  "include": ["src/index.ts"],
   "exclude": ["node_modules"]
 }
