--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "virchual",
   "version": "1.0.0-alpha.7",
   "description": "Super-fast, lightweight slider and carousel, written in TypeScript without any dependencies.",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "browser": "dist/index.bundle.js",
+  "main": "dist/virchual.js",
+  "module": "dist/virchual.esm.js",
+  "browser": "dist/virchual.bundle.js",
   "source": "src/index.ts",
-  "types": "dist/index.d.ts",
-  "unpkg": "dist/index.bundle.js",
+  "types": "dist/virchual.d.ts",
+  "unpkg": "dist/virchual.bundle.js",
   "files": [
     "src",
     "dist"
@@ -27,12 +27,15 @@
   "scripts": {
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "NODE_ENV=test jest --bail",
-    "build": "rollup -c && tsc",
-    "build:prod": "NODE_ENV=production rollup -c && tsc",
+    "build:css": "postcss src/css/styles.css --output dist/virchual.css",
+    "build:umd": "rollup --config build/umd.js && rollup --config build/umd.min.js",
+    "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
+    "build": "npm run build:css && npm run build:umd && npm run build:esm && tsc",
+    "build:prod": "NODE_ENV=production npm run build",
     "dev": "NODE_ENV=development rollup -cw && tsc",
     "lint-staged": "lint-staged",
     "typecheck": "tsc --noUnusedParameters false --noUnusedLocals false --outDir ./tmpDist --declarationDir ./tmpDist && rm -rf tmpDist",
-    "prepublish": "npm run build:prod",
+    "prepublishOnly": "npm run build:prod",
     "publish-docs": "cd website && GIT_USER=berndartmueller CURRENT_BRANCH=master npm run publish-gh-pages"
   },
   "lint-staged": {
@@ -63,13 +66,17 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "cssnano": "^4.1.10",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.20.0",
     "husky": "^4.2.5",
+    "jest": "^26.4.1",
     "lint-staged": "^10.2.11",
+    "postcss-cli": "^7.1.2",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
     "rollup": "^2.26.0",
@@ -80,8 +87,6 @@
     "rollup-plugin-typescript2": "^0.27.2",
     "rollup-plugin-visualizer": "^4.1.0",
     "ts-jest": "^26.2.0",
-    "@types/jest": "^26.0.10",
-    "jest": "^26.4.1",
     "typescript": "^3.9.7"
   },
   "dependencies": {}
