fix(bundle): fix issues with minified bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,13 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "types": ["node", "jest"],
-    "sourceMap": true
+    "lib": ["es6", "dom"],
+    "baseUrl": "./",
+    "sourceMap": true,
+    "paths": {
+      "@virchual/*": ["src/*"]
+    }
   },
-  "include": ["src/index.ts"],
+  "include": ["./src/**/*", "./examples/src/**/*"],
   "exclude": ["node_modules"]
 }
