--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
     "build": "npm run build:css && npm run build:umd && npm run build:esm && tsc",
     "build:prod": "NODE_ENV=production npm run build",
-    "dev": "NODE_ENV=development rollup -cw && tsc",
+    "dev": "NODE_ENV=development concurrently \"rollup -cw\" \"rollup --watch --config build/umd.min.js\"",
     "lint-staged": "lint-staged",
     "typecheck": "tsc --noUnusedParameters false --noUnusedLocals false --outDir ./tmpDist --declarationDir ./tmpDist && rm -rf tmpDist",
     "prepublishOnly": "npm run build:prod",
@@ -69,6 +69,7 @@
     "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "concurrently": "^5.3.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
