--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-babel": "^5.2.0",
     "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "babel-plugin-transform-rename-properties": "^0.1.0",
     "concurrently": "^5.3.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.7.0",
@@ -81,6 +83,7 @@
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
     "rollup": "^2.26.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-postcss": "^3.1.5",
     "rollup-plugin-serve": "^1.0.3",
@@ -90,5 +93,6 @@
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist": "> 0.25%, not dead"
 }
