--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "virchual",
+  "amdName": "Virchual",
   "version": "1.0.0-alpha.9",
   "description": "Super-fast, lightweight slider and carousel, written in TypeScript without any dependencies.",
+  "browser": "dist/virchual.bundle.js",
+  "types": "dist/virchual.d.ts",
+  "source": "entry/entry-complete.ts",
   "main": "dist/virchual.js",
   "module": "dist/virchual.esm.js",
-  "browser": "dist/virchual.bundle.js",
-  "source": "src/index.ts",
-  "types": "dist/virchual.d.ts",
-  "unpkg": "dist/virchual.bundle.js",
+  "unpkg": "dist/virchual.umd.js",
   "files": [
     "src",
     "dist"
@@ -27,10 +28,15 @@
   "scripts": {
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "NODE_ENV=test jest --bail",
+    "microbundle": "microbundle && npm run copy-dts",
+    "copy-dts": "copyfiles -u 2 \"./dist/src/**/*.d.ts\" ./dist && rm -rf ./dist/src",
     "build:css": "postcss src/css/styles.css --output dist/virchual.css",
     "build:umd": "rollup --config build/umd.js && rollup --config build/umd.min.js",
     "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
     "build": "npm run build:css && npm run build:umd && npm run build:esm && tsc",
+    "build:basic": "microbundle build --entry entry/entry-basic.ts -o dist/basic",
+    "build:complete": "microbundle build --entry entry/entry-complete.ts -o dist/complete",
+    "build:modular": "microbundle build --entry entry/entry-modular.ts -o dist/modular",
     "build:prod": "NODE_ENV=production npm run build",
     "dev": "NODE_ENV=development concurrently \"rollup -cw\" \"rollup --watch --config build/umd.min.js\"",
     "lint-staged": "lint-staged",
@@ -72,6 +78,7 @@
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-transform-rename-properties": "^0.1.0",
     "concurrently": "^5.3.0",
+    "copyfiles": "^2.3.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
@@ -79,6 +86,7 @@
     "husky": "^4.2.5",
     "jest": "^26.4.1",
     "lint-staged": "^10.2.11",
+    "microbundle": "^0.12.3",
     "postcss-cli": "^7.1.2",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
