--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "build:css": "postcss src/css/styles.css --output dist/virchual.css",
     "build:umd": "rollup --config build/umd.js && rollup --config build/umd.min.js",
     "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
-    "build": "npm run build:css && npm run build:umd && npm run build:esm && tsc",
-    "build:basic": "microbundle build --entry entry/entry-basic.ts -o dist/basic",
-    "build:complete": "microbundle build --entry entry/entry-complete.ts -o dist/complete",
-    "build:modular": "microbundle build --entry entry/entry-modular.ts -o dist/modular",
+    "build": "npm run build:css && npm run build:basic && npm run build:complete && npm run build:modular",
+    "build:basic": "microbundle build --entry entry/entry-basic.ts --tsconfig ./config/ts/tsconfig.basic.json -o dist/basic",
+    "build:complete": "microbundle build --entry entry/entry-complete.ts --tsconfig ./config/ts/tsconfig.complete.json -o dist/complete",
+    "build:modular": "microbundle build --entry entry/entry-modular.ts --tsconfig ./config/ts/tsconfig.modular.json -o dist/modular",
     "build:prod": "NODE_ENV=production npm run build",
     "dev": "NODE_ENV=development concurrently \"rollup -cw\" \"rollup --watch --config build/umd.min.js\"",
     "lint-staged": "lint-staged",
