--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "build:umd": "rollup --config build/umd.js && rollup --config build/umd.min.js",
     "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
     "build": "npm run build:css && npm run build:basic && npm run build:complete && npm run build:modular",
-    "build:basic": "microbundle build --entry entry/entry-basic.ts --tsconfig ./config/ts/tsconfig.basic.json -o dist/basic",
+    "build:basic": "microbundle build --entry entry/entry-basic.ts --tsconfig ./config/ts/tsconfig.basic.json -o dist/basic -f modern,cjs,umd",
     "build:complete": "microbundle build --entry entry/entry-complete.ts --tsconfig ./config/ts/tsconfig.complete.json -o dist/complete",
-    "build:modular": "microbundle build --entry entry/entry-modular.ts --tsconfig ./config/ts/tsconfig.modular.json -o dist/modular",
+    "build:modular": "microbundle build --entry entry/entry-modular.ts --tsconfig ./config/ts/tsconfig.modular.json -o dist/modular -f es",
     "build:prod": "NODE_ENV=production npm run build",
     "dev": "NODE_ENV=development concurrently \"rollup -cw\" \"rollup --watch --config build/umd.min.js\"",
     "lint-staged": "lint-staged",
@@ -73,24 +73,24 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@rollup/plugin-babel": "^5.2.1",
-    "@types/jest": "^26.0.13",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "babel-plugin-transform-rename-properties": "^0.1.0",
     "concurrently": "^5.3.0",
     "copyfiles": "^2.3.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.20.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jest": "^24.0.2",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
-    "lint-staged": "^10.3.0",
+    "lint-staged": "^10.4.0",
     "microbundle": "^0.12.3",
-    "postcss-cli": "^7.1.2",
+    "postcss-cli": "^8.0.0",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
-    "rollup": "^2.26.11",
+    "rollup": "^2.28.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-postcss": "^3.1.8",
@@ -98,8 +98,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.2",
     "rollup-plugin-visualizer": "^4.1.1",
-    "ts-jest": "^26.3.0",
-    "typescript": "^3.9.7"
+    "ts-jest": "^26.4.0",
+    "typescript": "^4.0.3"
   },
   "dependencies": {},
   "browserslist": "> 0.25%, not dead"
