--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "copyfiles": "^2.3.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.9.0",
+    "eslint-config-preact": "^1.1.3",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.0.2",
     "husky": "^4.3.0",
