--- a/packages/preact/examples/basic/package.json
+++ b/packages/preact/examples/basic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@virchual/preact",
+  "name": "@virchual/preact-examples-basic",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,15 +9,14 @@
     "url": "https://github.com/berndartmueller/virchual/issues"
   },
   "scripts": {
-    "build": "rollup -c"
+    "start": "snowpack dev"
   },
   "devDependencies": {
-    "rollup": "^2.28.2",
-    "rollup-plugin-typescript2": "^0.27.2",
+    "@prefresh/snowpack": "^2.1.0",
+    "@snowpack/plugin-typescript": "^1.1.0",
+    "@types/snowpack-env": "^2.3.2",
+    "snowpack": "^2.17.1",
     "typescript": "^4.0.3"
-  },
-  "peerDependencies": {
-    "preact": "^9.0.0"
   },
   "dependencies": {
     "preact": "^10.5.7"
