improve(preact): make it run

--- a/packages/preact/tsconfig.json
+++ b/packages/preact/tsconfig.json
@@ -8,7 +8,7 @@
     "declarationDir": "dist",
     "sourceMap": true,
     "outDir": "dist", // See also package.json scripts.tsc.
-    "strict": true,
+    // "strict": true,
     "moduleResolution": "node"
   },
 
