--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "rollup": "^2.28.2",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.27.2",
     "typescript": "^4.0.3"
   },
