--- a/package.json
+++ b/package.json
@@ -30,15 +30,13 @@
     "test": "NODE_ENV=test jest --bail",
     "microbundle": "microbundle && npm run copy-dts",
     "copy-dts": "copyfiles -u 2 \"./dist/src/**/*.d.ts\" ./dist && rm -rf ./dist/src",
-    "build:css": "postcss src/css/styles.css --output dist/virchual.css",
-    "build:umd": "rollup --config build/umd.js && rollup --config build/umd.min.js",
-    "build:esm": "rollup --config build/esm.js && rollup --config build/esm.modular.js",
     "build": "npm run build:css && npm run build:basic && npm run build:complete && npm run build:modular",
-    "build:basic": "microbundle build --entry entry/entry-basic.ts --tsconfig ./config/ts/tsconfig.basic.json -o dist/basic -f modern,cjs,umd",
-    "build:complete": "microbundle build --entry entry/entry-complete.ts --tsconfig ./config/ts/tsconfig.complete.json -o dist/complete",
-    "build:modular": "microbundle build --entry entry/entry-modular.ts --tsconfig ./config/ts/tsconfig.modular.json -o dist/modular -f es",
     "build:prod": "NODE_ENV=production npm run build",
-    "dev": "NODE_ENV=development concurrently \"rollup -cw\" \"rollup --watch --config build/umd.min.js\"",
+    "build:basic": "microbundle build --entry entry/entry-basic.ts --tsconfig ./config/typescript/tsconfig.basic.json -o dist/basic -f modern,cjs,umd",
+    "build:complete": "microbundle build --entry entry/entry-complete.ts --tsconfig ./config/typescript/tsconfig.complete.json -o dist/complete",
+    "build:modular": "microbundle build --entry entry/entry-modular.ts --tsconfig ./config/typescript/tsconfig.modular.json -o dist/modular -f es",
+    "build:css": "postcss src/css/styles.css --output dist/virchual.css",
+    "dev": "NODE_ENV=development",
     "lint-staged": "lint-staged",
     "typecheck": "tsc --noUnusedParameters false --noUnusedLocals false --outDir ./tmpDist --declarationDir ./tmpDist && rm -rf tmpDist",
     "prepublishOnly": "npm run build:prod",
