--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss-cli": "^8.0.0",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
+    "travis-size-report": "^1.1.0",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
