--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
-node_modules/
-npm-debug.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 lib
 .idea
 dist
 website/node_modules
 website/build
 stats.html
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+tags
+
+# cypress
+**/cypress/videos
+**/cypress/screenshots
