--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "author": "Bernd Artmüller",
   "license": "MIT",
   "bugs": {
@@ -18,5 +19,7 @@
     "snowpack": "^2.17.1",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "virchual": "*"
+  }
 }
