--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -2,25 +2,28 @@
   "name": "@virchual/preact",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Bernd Artmüller",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/berndartmueller/virchual/issues"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "rollup -c --watch"
+  },
+  "dependencies": {
+    "virchual": "1.0.0-alpha.9"
   },
   "devDependencies": {
     "rollup": "^2.28.2",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.27.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "preact": "^10.5.7"
   },
   "peerDependencies": {
-    "preact": "^9.0.0"
-  },
-  "dependencies": {
     "preact": "^10.5.7"
   }
 }
