--- a/packages/virchual/tsconfig.json
+++ b/packages/virchual/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationDir": "./dist",
+    "declaration": false,
     "module": "es6",
     "noImplicitAny": false,
-    "outDir": "./dist",
     "target": "es2016",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "types": ["node", "jest"],
     "lib": ["es6", "dom"],
-    "baseUrl": "./",
+    "baseUrl": ".",
     "sourceMap": true,
     "paths": {
       "@virchual/*": ["src/*"]
     }
   },
-  "include": ["./src/**/*", "./examples/src/**/*", "./entry/*"],
-  "exclude": ["node_modules"]
+  // "include": ["./src/**/*"],
+  "exclude": ["node_modules", "./entry"]
 }
