--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@virchual/preact",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,14 +14,14 @@
     "dev": "rollup -c --watch"
   },
   "dependencies": {
-    "virchual": "1.0.0-alpha.9"
+    "virchual": "^1.0.0-alpha.10"
   },
   "devDependencies": {
+    "preact": "^10.5.7",
     "rollup": "^2.28.2",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.27.2",
-    "typescript": "^4.0.3",
-    "preact": "^10.5.7"
+    "typescript": "^4.0.3"
   },
   "peerDependencies": {
     "preact": "^10.5.7"
