--- a/packages/virchual/package.json
+++ b/packages/virchual/package.json
@@ -70,6 +70,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
+    "@types/sinon": "^9.0.9",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "concurrently": "^5.3.0",
@@ -86,6 +87,7 @@
     "postcss-cli": "^8.0.0",
     "postcss-copy": "^7.1.0",
     "postcss-import": "^12.0.1",
+    "sinon": "^9.2.1",
     "travis-size-report": "^1.1.0",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
