--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -20,6 +20,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "virchual": "*"
+    "virchual": "link:../../packages/virchual"
   }
 }
