--- a/examples/with-preact/package.json
+++ b/examples/with-preact/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@virchual/preact": "link:../../packages/preact",
+    "virchual": "link:../../packages/virchual",
     "preact": "^10.5.7"
   }
 }
